--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
     <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
     <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+    <div class="container">
+      <span class="cabeçalho__menu-hamburguer"></span>
+      <img src="img/Logo.svg" alt="Logo da AluraBooks">
+  </div>
+  <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+  <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+  <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
 </header>
     </body>
 </html>
